--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.24",
     "core-js": "^2.6.5",
     "nprogress": "^0.2.0",
+    "pdfjs-dist": "^2.1.266",
     "vue": "^2.6.10",
-    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6",
+    "vue-signature-pad": "^1.1.10",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
